Changed name of npm package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "videojs-vimeo",
+    "name": "videojs-vimeo-tech",
     "version": "1.0.0",
     "description": "Vimeo playback technology for Video.js",
     "author": {
